test/ill-formed/unsupported/bytes_literal.py
x = b"hello"
print(x)
